# lvglui

./: .flake8  .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: buildtest.yml
example/basic/: CMakeLists.txt
example/widget_demo/: .gitignore  CMakeLists.txt
example/widget_demo/src/: main.c
example/widget_demo/ui/: __main__.py  ui.py
lvglui/: __init__.py
lvglui/basic/: __init__.py  obj.py  stateless_widget.py
lvglui/core/: __init__.py  arc.py  bar.py  button.py  button_mutrix.py  checkbox.py  dropdown.py  image.py  label.py  roller.py  screen.py  slider.py  switch.py  textarea.py
lvglui/generator/base/: generator.py
lvglui/generator/tamplate/: __init__.py  lvgl_c.tpl.c  lvgl_c.tpl.h  lvgl_c_data.tpl.inc  tamplate_generator.py
tests/: screen_test.py
