[tool.poetry]
name = "lvglui"
version = "0.1.0"
description = ""
authors = ["yaoyulong <yaoyulong@cn.panasonic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
